# doc-pipeline

./: .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
_agents/workflows/: finish-task.md  quality-check.md  start-task.md
config/: default_config.yaml
doc-pipeline/: .env.example  .gitignore  README.md  main.py  pyproject.toml
doc-pipeline/docs/: curated_search_taxonomy.md  repo_release_hygiene.md
doc-pipeline/evals/: baseline.json  curated_queries.jsonl  eval_report.json  failed_ocr_docs.json  generate_eval_set.py  ocr_engine_stats.json  ocr_retry_report.json  relevance_judgments.jsonl  search_queries.jsonl
doc-pipeline/scripts/: eval_search.py  export_failed_ocr.py  report_ocr_engine_stats.py  report_ocr_retry_candidates.py
doc-pipeline/src/doc_pipeline/: cli.py
doc-pipeline/src/doc_pipeline/agents/: __init__.py  classify_agent.py  deps.py  draft_agent.py  instrumentation.py  schemas.py  search_agent.py
doc-pipeline/src/doc_pipeline/config/: settings.py
doc-pipeline/src/doc_pipeline/generator/: drafter.py
doc-pipeline/src/doc_pipeline/processor/: ocr_ops.py  pipeline.py
doc-pipeline/src/doc_pipeline/search/: __init__.py  aggregator.py  profiles.py  query_parser.py  unified.py
doc-pipeline/src/doc_pipeline/storage/: registry.py  vectordb.py
doc-pipeline/tests/: test_agents.py  test_cli.py  test_eval.py  test_main.py  test_ocr_ops.py  test_pipeline.py  test_query_parser.py  test_registry.py  test_search_aggregator.py  test_settings.py  test_unified_search.py  test_vectordb.py
docs/: vision_en.md  vision_ko.md
guides/: ai_agent_sop.md  backend_guideline.md  frontend_guideline.md  testing_guideline.md
src/filehub/: __init__.py  __main__.py  app.py  wiring.py
src/filehub/actions/: __init__.py  base.py  engine.py  models.py  move.py  rename.py
src/filehub/cli/: __init__.py  main.py
src/filehub/config/: __init__.py  loader.py  schema.py  watcher.py
src/filehub/core/: __init__.py  models.py
src/filehub/core/notification/: __init__.py  notifier.py
src/filehub/core/notification/channels/: __init__.py  base.py  console.py  log.py  manager.py  slack.py  teams.py
src/filehub/core/pipeline/: __init__.py  aggregator.py  ignore_filter.py  processor.py  stability.py
src/filehub/core/watcher/: __init__.py  handlers.py  observer.py  reconcile.py
src/filehub/i18n/: __init__.py
src/filehub/i18n/locales/en/LC_MESSAGES/: filehub.po
src/filehub/i18n/locales/ko/LC_MESSAGES/: filehub.po
src/filehub/integrations/: __init__.py  pdf.py
src/filehub/naming/: __init__.py  config.py  iso19650.py  validator.py
src/filehub/naming/profiles/: __init__.py  loader.py  models.py
src/filehub/plugins/: __init__.py  base.py  manager.py
src/filehub/reporting/: __init__.py  collector.py  report.py  store.py
src/filehub/templates/: __init__.py  engine.py  schemas.py
src/filehub/ui/: __init__.py  dashboard.py  stats_display.py  tray.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_actions.py  test_aggregator.py  test_app.py  test_channels.py  test_cli.py  test_cli_extended.py  test_cli_organize.py  test_cli_scaffold.py  test_config_loader.py  test_config_watcher.py  test_edge_cases.py  test_handlers.py  test_i18n.py  test_ignore_filter.py  test_iso19650.py  test_move_action.py  test_notifier.py  test_observer.py  test_organize_template.py  test_path_traversal.py  test_pdf_integration.py  test_plugins.py  test_processor.py  test_profile_validator.py  test_profiles.py  test_reconcile.py  test_rename_action.py  test_reporting.py  test_schema.py  test_stability.py  test_stats_display.py  test_tray.py  test_wiring.py
